# devOS

./: .gitignore  README.md  SETUP.md  vercel.json
.github/workflows/: deploy-web.yml
api/: tool-events.js
dashboard/: app.py  auth.py  data.py  firm.py  hackathon.py  mock_data.py  requirements.txt
dashboard/.streamlit/: secrets.toml.example
prompts/: master_prompt.md
server/: .env.example  Dockerfile  bot-nemotron.py  intake_flow.py  nemotron_llm.py  pcc-deploy.toml  pipecat-cloud-org.toml  pyproject.toml  test_harness.py  tool_events_api.py  twilio-twiml.xml
server/prompts/: master_prompt.md
server/tests/: test_test_harness.py  test_tool_events_api.py
server/tools/: case_router.py  eval_loop.py  intake_assembly.py  post_call_queue.py  requirements_tools.txt  s3_logger.py  sol_lookup.py  supabase_logger.py  treatment_classifier.py
server/tools/tests/: conftest.py  test_case_router.py  test_eval_loop.py  test_intake_assembly.py  test_post_call_queue.py  test_s3_logger.py  test_sol_lookup.py  test_treatment_classifier.py
supabase/migrations/: 0001_init.sql  0002_record_call.sql  0003_rls.sql  0004_firm_phone_and_live_events.sql  0005_multi_tenant.sql
web/: .env.example  index.html  vite.config.ts
web/api/: provision-number.js  twiml.js
web/src/: App.tsx
web/src/app/: Calls.tsx  ConsoleLayout.tsx  Live.tsx
web/src/auth/: AuthProvider.tsx
web/src/components/: BackedBy.tsx  YCombinatorWordmark.tsx
web/src/lib/: calls.ts  marketing.ts  mock.ts  provision.ts  supabase.ts  tool-events.ts  types.ts
web/src/pages/: AuthLayout.tsx  Landing.tsx  (+2 more)
